<resources>
    <string name="app_name">Shop Free</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="Address">Address</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="version">version </string>
    <string name="activety_name">Products</string>
    <string name="title_Categories">Categories</string>
    <string name="title_Shopping">Shopping</string>
    <string name="title_Profile">Profile</string>
    <string name="title_About">About</string>
    <string name="action_search">Search</string>
    <string name="action_Basket">Basket</string>
    <string name="copyright">All reights reserved, 2015</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="order_now">Order Now</string>
    <string-array name="array_list">
        <item>Categories</item>
        <item>Shopping</item>
        <item>Profile</item>
        <item>About</item>
    </string-array>
    <string name="err_product_failed">Failed to get product</string>
</resources>
