<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".OrderConfirmActivity">


    <EditText
        android:id="@+id/text_phone_number"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:gravity="top"
        android:layout_weight="1"
        android:hint="@string/hint_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_address" />


    <Button android:text="@string/order_now"
        android:id="@+id/order_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
